# mllm

./: .gitignore  AlpacaEval_mllm_LLaMA3.2_1B_result.json  AlpacaEval_mllm_LLaMA3.2_3B_result.json  CMakeCache.txt  CMakeLists.txt  README.md  qwen2.5-0.5b-q4_0-quantize layers info.txt  qwen2.5-0.5b-quantize layers info.txt
.github/workflows/: codeql.yml
assets/: model_src.json
dataset/: 256_qa.csv  64_qa.csv  64tok_qa.csv  arc_challenge.json  arc_easy.json
examples/: CMakeLists.txt  demo_llama3.cpp  demo_qwen.cpp  demo_qwen3.cpp  llama3_eval.cpp  qwen_eval.cpp  stream_llama3.cpp  stream_qwen.cpp  test_qwen.cpp
include/: Types.hpp
main/: CMakeLists.txt  agent_aff_qwen3.cpp  agent_qwen3.cpp  micro.cpp  qwen3_eval.cpp  stream_llama3.cpp  stream_qwen.cpp  stream_qwen3.cpp  token_length_tester.cpp
output/: HotpotQA_mllm_Qwen3_1.7B_10-10_to_6-6_hard.txt  HotpotQA_mllm_Qwen3_1.7B_10-10_to_6-6_infer.txt
scripts/: build.sh
scripts-termux/: agent-aff-qwen.sh  agent-qwen.sh  base-runfile.sh  download_qwen.sh  dynamic-runfile-t.sh  ignite-llama.sh  ignite-qwen.sh  ignite-runfile.sh  llama3-runfile.sh  phase-runfile.sh  run-setup.sh
src/: Module.cpp  Module.hpp
src/analyzer/: LayerAnalyze.cpp  LayerAnalyze.hpp  main.cpp
src/common/: common.h
src/hardware/: device.cpp  device.h  dvfs.cpp  dvfs.h  record.cpp  record.h  utils.cpp  utils.h
src/memory/: MemoryPoolManager.cpp
src/models/llama3/: modeling_llama3.hpp
src/models/qwen/: configuration_qwen.hpp  modeling_qwen.hpp  tokenization_qwen.hpp
src/models/qwen3/: configuration_qwen3.hpp  modeling_qwen3.hpp  tokenization_qwen3.hpp
src/utils/: files.hpp
tools/gguf/: layer_analyzer.py  operator_analyzer.py
tools/perfetto/: perfetto-parser.py
tools/py/: anskey_adder.py  downloader.py  jitter.py  regenerate.py  verifier.py
